<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:st="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_back"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/margin_small"
    android:paddingLeft="@dimen/margin_small"
    android:paddingRight="@dimen/margin_small"
    android:paddingBottom="1dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/item_main_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/layout_topline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_small">

            <LinearLayout
                android:id="@+id/layout_sta_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/icon_1002_sta"
                android:gravity="center_vertical"
                android:minWidth="100dp">

                <TextView
                    android:id="@+id/txt_circle"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/icon_linenum"
                    android:gravity="center"
                    android:minWidth="20dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="분당"
                    android:textColor="@color/bg_white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txt_station"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/fab_test_2"
                    android:textColor="@color/lab_station"
                    android:textSize="@dimen/fab_station" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_down_dst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/fab_test_1"
                    android:textColor="@color/fab_dst"
                    android:textSize="@dimen/fab_status" />

                <TextView
                    android:id="@+id/txt_down_station"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/fab_test_2"
                    android:textColor="@color/fab_down"
                    android:textSize="@dimen/fab_status_big" />

                <TextView
                    android:id="@+id/txt_down_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/fab_test_3"
                    android:textColor="@color/fab_status"
                    android:textSize="@dimen/fab_status" />

            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/fab_divider" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_up_dst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/fab_test_1"
                    android:textColor="@color/fab_dst"
                    android:textSize="@dimen/fab_status" />

                <TextView
                    android:id="@+id/txt_up_station"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/fab_test_2"
                    android:textColor="@color/fab_up"
                    android:textSize="@dimen/fab_status_big" />

                <TextView
                    android:id="@+id/txt_up_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/fab_test_3"
                    android:textColor="@color/fab_status"
                    android:textSize="@dimen/fab_status" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="@dimen/margin_small"
            android:background="@color/lab_sep" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txt_down_next_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:gravity="right"
                    android:maxLines="1"
                    android:text="@string/fab_test_3"
                    android:textColor="@color/fab_next_status"
                    android:textSize="@dimen/fab_next" />

                <TextView
                    android:id="@+id/txt_down_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:gravity="left"
                    android:maxLines="1"
                    android:text="@string/fab_test_3"
                    android:textColor="@color/fab_status"
                    android:textSize="@dimen/fab_next" />

            </FrameLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/fab_divider" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txt_up_next_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:gravity="right"
                    android:maxLines="1"
                    android:text="@string/fab_test_3"
                    android:textColor="@color/fab_next_status"
                    android:textSize="@dimen/fab_next" />

                <TextView
                    android:id="@+id/txt_up_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:gravity="left"
                    android:maxLines="1"
                    android:text="@string/fab_test_3"
                    android:textColor="@color/fab_status"
                    android:textSize="@dimen/fab_next" />

            </FrameLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
